# FunctionProgrammingLab

./: .gitignore  README.md  pyproject.toml
src/: main.py
src/data_analysis/: __init__.py  data_insights.py  data_processing.py  visualization.py
src/utils/: __init__.py  config.py  data_processing.py  logger.py  types.py
