[tool.poetry]
name = "pjf"
version = "0.1.0"
description = "Content for lab 1_2, data analysis with python"
authors = ["Floressek <szymon.florek@student.wat.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.2.1"
logging = "^0.4.9.6"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
