[tool.poetry]
name = "movie-analysis"
version = "0.1.0"
description = "Content for lab 1_2, data analysis with python"
authors = ["Floressek <szymon.florek@student.wat.edu.pl>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
matplotlib = "^3.10.0"
pandas = "^2.2.3"
seaborn = "^0.13.2"
numpy = "^2.2.1"
logging = "^0.4.9.6"

[tool.poetry.dev-dependencies]
pytest = "^7.3.1"
pytest-cov = "^4.1.0"
mypy = "^1.5.1"
black = "^23.7.0"
isort = "^5.12.0"
flake8 = "^6.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py312']
include = '\.pyi?$'

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true
